Remove unused welcome board container and adjust layout for better spacing on welcome screen

--- a/index.html
+++ b/index.html
@@ -257,10 +257,7 @@
     <h2>Test your knowledge and climb to victory!</h2>
 	<p>Developed by NIETT</p>
 
-    <!-- Add Snake & Ladder Board -->
-    <div class="welcomeBoardContainer">
-        <div id="welcomeBoard"></div> <!-- This will hold the board -->
-    </div>
+    <!-- The extra board image that caused the scrolling has been removed -->
 
     <button id="welcomeNextBtn">Next</button>
 </div>
