🎨 Update admin header background gradient for improved aesthetics

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
         }
 
         .admin-header {
-            background: linear-gradient(135deg, #2455db, #5577ff);
+            background: linear-gradient(135deg, #8da7ee, #5577ff);
             color: white;
             text-align: center;
             padding: 40px 20px;
