🔧 Revamp module selection UI with improved layout, icons, and descriptions for better user experience

--- a/index.html
+++ b/index.html
@@ -338,69 +338,53 @@
     <p class="subHeading">Select a topic to test your knowledge!</p>
     
     <div class="modules-grid">
-      <!-- Teaching Learning Process -->
-      <div class="module-card" data-module="tlprocess" onclick="selectModule('tlprocess')">
-        <div class="module-icon">
-          <img src="images/modules/tlprocess.png" alt="Teaching Learning Process">
+        <div class="module-card" data-module="tlprocess" onclick="selectModule('tlprocess')">
+            <div class="module-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+            <h3>Teaching Learning Process</h3>
+            <p>Comprehensive guide to effective teaching methodologies</p>
         </div>
-        <button class="module-btn">Teaching Learning Process</button>
-      </div>
 
-      <!-- Learning Theories -->
-      <div class="module-card" data-module="learningtheories" onclick="selectModule('learningtheories')">
-        <div class="module-icon">
-          <img src="images/modules/learningtheories.png" alt="Learning Theories">
+        <div class="module-card" data-module="learningtheories" onclick="selectModule('learningtheories')">
+            <div class="module-icon"><i class="fas fa-brain"></i></div>
+            <h3>Learning Theories</h3>
+            <p>Fundamental theories of how learning occurs</p>
         </div>
-        <button class="module-btn">Learning Theories</button>
-      </div>
 
-      <!-- 4 Ways of Learning -->
-      <div class="module-card" data-module="fourways" onclick="selectModule('fourways')">
-        <div class="module-icon">
-          <img src="images/modules/fourways.png" alt="4 Ways of Learning">
+        <div class="module-card" data-module="fourways" onclick="selectModule('fourways')">
+            <div class="module-icon"><i class="fas fa-route"></i></div>
+            <h3>4 Ways of Learning</h3>
+            <p>Visual, Auditory, Reading/Writing, and Kinesthetic learning styles</p>
         </div>
-        <button class="module-btn">4 Ways of Learning</button>
-      </div>
 
-      <!-- Andragogy -->
-      <div class="module-card" data-module="andragogy" onclick="selectModule('andragogy')">
-        <div class="module-icon">
-          <img src="images/modules/andragogy.png" alt="Andragogy">
+        <div class="module-card" data-module="andragogy" onclick="selectModule('andragogy')">
+            <div class="module-icon"><i class="fas fa-user-graduate"></i></div>
+            <h3>Andragogy</h3>
+            <p>Adult learning principles and methodologies</p>
         </div>
-        <button class="module-btn">Andragogy</button>
-      </div>
 
-      <!-- Systematic Approach to Training -->
-      <div class="module-card" data-module="sat" onclick="selectModule('sat')">
-        <div class="module-icon">
-          <img src="images/modules/sat.png" alt="Systematic Approach to Training">
+        <div class="module-card" data-module="sat" onclick="selectModule('sat')">
+            <div class="module-icon"><i class="fas fa-cogs"></i></div>
+            <h3>Systematic Approach to Training</h3>
+            <p>Structured methodology for training design</p>
         </div>
-        <button class="module-btn">Systematic Approach to Training (SAT)</button>
-      </div>
 
-      <!-- Basic Teaching Model -->
-      <div class="module-card" data-module="btm" onclick="selectModule('btm')">
-        <div class="module-icon">
-          <img src="images/modules/btm.png" alt="Basic Teaching Model">
+        <div class="module-card" data-module="btm" onclick="selectModule('btm')">
+            <div class="module-icon"><i class="fas fa-layer-group"></i></div>
+            <h3>Basic Teaching Model</h3>
+            <p>Fundamental framework for structured teaching</p>
         </div>
-        <button class="module-btn">Basic Teaching Model</button>
-      </div>
 
-      <!-- Domains of Learning -->
-      <div class="module-card" data-module="dol" onclick="selectModule('dol')">
-        <div class="module-icon">
-          <img src="images/modules/dol.png" alt="Domains of Learning">
+        <div class="module-card" data-module="dol" onclick="selectModule('dol')">
+            <div class="module-icon"><i class="fas fa-cube"></i></div>
+            <h3>Domains of Learning</h3>
+            <p>Cognitive, Affective, and Psychomotor learning domains</p>
         </div>
-        <button class="module-btn">Domains of Learning</button>
-      </div>
 
-      <!-- Writing Objectives -->
-      <div class="module-card" data-module="objectives" onclick="selectModule('objectives')">
-        <div class="module-icon">
-          <img src="images/modules/objectives.png" alt="Writing Objectives">
+        <div class="module-card" data-module="objectives" onclick="selectModule('objectives')">
+            <div class="module-icon"><i class="fas fa-bullseye"></i></div>
+            <h3>Writing Objectives</h3>
+            <p>Creating clear, measurable learning objectives</p>
         </div>
-        <button class="module-btn">Writing Objectives</button>
-      </div>
     </div>
 
     <div class="navigation-buttons">
