🚀 FINAL RELEASE: Complete project finalization and cleanup
✨ Major Changes:
- Replaced README.md with comprehensive new documentation
- Organized teacher resources into dedicated teacher-resources/ folder
- Cleaned up all unnecessary files (backups, tests, old assets)
- Removed unused module images and backup files
- Added .gitignore, LICENSE, and DEPLOYMENT_CHECKLIST.md

📁 File Organization:
- Moved TEACHER_GUIDE.md to teacher-resources/
- Moved questions.csv and template_questions.csv to teacher-resources/
- Updated all internal links to reflect new structure
- Maintained clean, professional directory structure

🧹 Cleanup Completed:
- Removed 15+ unnecessary files including backups and tests
- Deleted unused module PNG images (now using Font Awesome icons)
- Cleaned up admin.html and script.js backup files
- Removed old implementation and status report files

🎯 Production Ready:
- All features working correctly
- Professional documentation complete
- Clean codebase with no technical debt
- Ready for deployment and distribution

This commit represents the final, production-ready version of EduLadder Quest.

--- a/admin.html
+++ b/admin.html
@@ -385,7 +385,7 @@
                 <a href="index.html" class="back-to-game">
                     <i class="fas fa-gamepad"></i> Back to Game
                 </a>
-                <a href="TEACHER_GUIDE.md" class="back-to-game" style="background: linear-gradient(45deg, #28a745, #20c997); margin-left: 10px;" target="_blank">
+                <a href="teacher-resources/TEACHER_GUIDE.md" class="back-to-game" style="background: linear-gradient(45deg, #28a745, #20c997); margin-left: 10px;" target="_blank">
                     <i class="fas fa-book"></i> Teacher Guide
                 </a>
             </div>
