🔧 GAMEPLAY IMPROVEMENTS: Enhanced question modal UX and feedback system
✨ Major Improvements:
1. **Extended Feedback Time**: Increased answer display from 2s to 4s for better readability
2. **Added Abort/Skip Options**: Users can now skip questions with dedicated Skip button and X close button
3. **Added Roll Dice Instructions**: Clear instruction banner on game board for better UX
4. **Enhanced Submit Validation**: Better handling when no option is selected with helpful alerts
5. **Improved Modal Design**: Enhanced styling with better option layout and visual feedback

🎯 Bug Fixes:
- Fixed Submit button not responding by improving event handling
- Added proper validation for option selection before submission
- Enhanced error handling and user feedback throughout question flow
- Improved accessibility with clearer visual cues for interactive elements

🎨 UI/UX Enhancements:
- Modern card-style option selection with hover effects
- Professional modal header with close button
- Color-coded action buttons (Submit blue, Skip gray)
- Instruction text for guidance
- Better spacing and typography in question modals

These changes address all the reported issues and significantly improve the overall gameplay experience.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
           </div>
         </div>
         <div class="gamePlayers">
+          <div class="game-instruction">
+            <h3>🎲 Roll the Dice to Play!</h3>
+            <p>Click on your dice when it's your turn</p>
+          </div>
           <div class="playersBox">
             <div class="playerCard" id="playerCard1">
               <div class="level1">
@@ -239,9 +243,16 @@
 
 <div id="questionModal" class="modal hidden">
   <div class="modal-content">
-    <h2 id="questionText"></h2>
+    <div class="modal-header">
+      <h2 id="questionText"></h2>
+      <button id="closeQuestion" class="close-btn" title="Skip Question">&times;</button>
+    </div>
     <div id="optionsContainer"></div>
-    <button id="submitAnswer">Submit</button>
+    <div class="modal-actions">
+      <button id="submitAnswer">Submit</button>
+      <button id="skipQuestion" class="skip-btn">Skip Question</button>
+    </div>
+    <p class="instruction-text">Select an option before submitting or use "Skip Question" to continue.</p>
   </div>
 </div>
 <div id="feedbackModal" class="modal hidden">
