Remove Skip Question button from game modal
- Removed Skip Question button from question modal to maintain gamification
- Removed instruction text about skipping questions
- Players can still close the modal using the X button
- Improved user experience by focusing on answering questions

--- a/index.html
+++ b/index.html
@@ -245,14 +245,13 @@
   <div class="modal-content">
     <div class="modal-header">
       <h2 id="questionText"></h2>
-      <button id="closeQuestion" class="close-btn" title="Skip Question">&times;</button>
+      <button id="closeQuestion" class="close-btn" title="Close Question">&times;</button>
     </div>
     <div id="optionsContainer"></div>
     <div class="modal-actions">
       <button id="submitAnswer">Submit</button>
-      <button id="skipQuestion" class="skip-btn">Skip Question</button>
     </div>
-    <p class="instruction-text">Select an option before submitting or use "Skip Question" to continue.</p>
+    <p class="instruction-text">Select an option before submitting.</p>
   </div>
 </div>
 <div id="feedbackModal" class="modal hidden">
