--- a/index.html
+++ b/index.html
@@ -348,53 +348,51 @@
     <p class="subHeading">Select a topic to test your knowledge!</p>
     
     <div class="modules-grid">
-        <div class="module-card" data-module="tlprocess" onclick="selectModule('tlprocess')">
-            <div class="module-icon"><i class="fas fa-chalkboard-teacher"></i></div>
-            <h3>Teaching Learning Process</h3>
-            <p>Comprehensive guide to effective teaching methodologies</p>
-        </div>
-
-        <div class="module-card" data-module="learningtheories" onclick="selectModule('learningtheories')">
-            <div class="module-icon"><i class="fas fa-brain"></i></div>
-            <h3>Learning Theories</h3>
-            <p>Fundamental theories of how learning occurs</p>
-        </div>
-
-        <div class="module-card" data-module="fourways" onclick="selectModule('fourways')">
-            <div class="module-icon"><i class="fas fa-route"></i></div>
-            <h3>4 Ways of Learning</h3>
-            <p>Visual, Auditory, Reading/Writing, and Kinesthetic learning styles</p>
-        </div>
-
-        <div class="module-card" data-module="andragogy" onclick="selectModule('andragogy')">
-            <div class="module-icon"><i class="fas fa-user-graduate"></i></div>
-            <h3>Andragogy</h3>
-            <p>Adult learning principles and methodologies</p>
-        </div>
-
-        <div class="module-card" data-module="sat" onclick="selectModule('sat')">
-            <div class="module-icon"><i class="fas fa-cogs"></i></div>
-            <h3>Systematic Approach to Training</h3>
-            <p>Structured methodology for training design</p>
-        </div>
-
-        <div class="module-card" data-module="btm" onclick="selectModule('btm')">
-            <div class="module-icon"><i class="fas fa-layer-group"></i></div>
-            <h3>Basic Teaching Model</h3>
-            <p>Fundamental framework for structured teaching</p>
-        </div>
-
-        <div class="module-card" data-module="dol" onclick="selectModule('dol')">
-            <div class="module-icon"><i class="fas fa-cube"></i></div>
-            <h3>Domains of Learning</h3>
-            <p>Cognitive, Affective, and Psychomotor learning domains</p>
-        </div>
-
-        <div class="module-card" data-module="objectives" onclick="selectModule('objectives')">
-            <div class="module-icon"><i class="fas fa-bullseye"></i></div>
-            <h3>Writing Objectives</h3>
-            <p>Creating clear, measurable learning objectives</p>
-        </div>
+    <div class="module-card" data-module="mod1" onclick="selectModule('mod1')">
+      <div class="module-icon"><i class="fas fa-cube"></i></div>
+      <h3>Module 1</h3>
+      <p>Domains of Learning</p>
+    </div>
+    <div class="module-card" data-module="mod2" onclick="selectModule('mod2')">
+      <div class="module-icon"><i class="fas fa-list-alt"></i></div>
+      <h3>Module 2</h3>
+      <p>TOS, Master Syllabus &amp; Evaluation</p>
+    </div>
+    <div class="module-card" data-module="mod3" onclick="selectModule('mod3')">
+      <div class="module-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+      <h3>Module 3</h3>
+      <p>TL process, Andragogy, SAT, BTM &amp; Ways of Learning</p>
+    </div>
+    <div class="module-card" data-module="mod4" onclick="selectModule('mod4')">
+      <div class="module-icon"><i class="fas fa-bullseye"></i></div>
+      <h3>Module 4</h3>
+      <p>Objectives, Maxims &amp; Questioning Technique</p>
+    </div>
+    <div class="module-card" data-module="mod5" onclick="selectModule('mod5')">
+      <div class="module-icon"><i class="fas fa-users"></i></div>
+      <h3>Module 5</h3>
+      <p>Lesson, Lecture, Demonstration, Group Discussion, Coaching, CBT, Media in Training</p>
+    </div>
+    <div class="module-card" data-module="mod6" onclick="selectModule('mod6')">
+      <div class="module-icon"><i class="fas fa-user-tie"></i></div>
+      <h3>Module 6</h3>
+      <p>Instructor Like Qualities, Video in Training, Feedback</p>
+    </div>
+    <div class="module-card" data-module="mod7" onclick="selectModule('mod7')">
+      <div class="module-icon"><i class="fas fa-chart-bar"></i></div>
+      <h3>Module 7</h3>
+      <p>TDEC, Item Analysis, Result Analysis</p>
+    </div>
+    <div class="module-card" data-module="mod8" onclick="selectModule('mod8')">
+      <div class="module-icon"><i class="fas fa-book"></i></div>
+      <h3>Module 8</h3>
+      <p>Training Directives</p>
+    </div>
+    <div class="module-card" data-module="mod9" onclick="selectModule('mod9')">
+      <div class="module-icon"><i class="fas fa-comments"></i></div>
+      <h3>Module 9</h3>
+      <p>Motivation, Communication, Code of Ethics</p>
+    </div>
     </div>
 
     <div class="navigation-buttons">
